--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -1,10 +1,5 @@
-@import "tailwindcss";
+@import 'tailwindcss';
 
-/*
-  The following @theme and @utility directives are valid in Tailwind CSS v4.
-  We ignore the lint errors because the current lint configuration does not yet recognize them.
-*/
-/* stylelint-disable */
 @theme {
   /* Colors */
   --color-background: hsl(0 0% 100%);
@@ -42,12 +37,12 @@
   --color-chart-5: hsl(27 87% 67%);
 
   /* Custom Colors */
-  --color-primary-coral: #E95F5C;
-  --color-primary-mint: #79CEB8;
-  --color-primary-yellow: #FFDB00;
-  --color-primary-skyblue: #5CC3E8;
+  --color-primary-coral: #e95f5c;
+  --color-primary-mint: #79ceb8;
+  --color-primary-yellow: #ffdb00;
+  --color-primary-skyblue: #5cc3e8;
   --color-primary-navy: #314855;
-  --color-primary-white: #FFFFFF;
+  --color-primary-white: #ffffff;
   --color-error: #f5f5f5;
 
   /* Fonts */
@@ -162,7 +157,7 @@
 }
 
 @utility text-body2 {
-  font-size: .875rem;
+  font-size: 0.875rem;
   line-height: 1.6;
   font-weight: 500;
 }
@@ -174,7 +169,7 @@
 }
 
 @utility text-body2Bold {
-  font-size: .875rem;
+  font-size: 0.875rem;
   line-height: 1.6;
   font-weight: 700;
 }
@@ -186,13 +181,13 @@
 }
 
 @utility text-smallBtn {
-  font-size: .875rem;
+  font-size: 0.875rem;
   line-height: 1.4;
   font-weight: 600;
 }
 
 @utility text-caption {
-  font-size: .75rem;
+  font-size: 0.75rem;
   line-height: 1.4;
   font-weight: 500;
 }
@@ -212,7 +207,6 @@
 @utility min-w-mobile {
   min-width: 21.875rem;
 }
-
 
 /* Fonts */
 @font-face {
